# IJML-WEEKEND-1

./: README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/config/: settings.py
backend/users/: models.py
backend/users/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
